# crc3_src

./: .gitignore  README.md
crc3_add_task/: CMakeLists.txt  package.xml
crc3_add_task/cfg/: Distance.cfg
crc3_add_task/launch/: add_task_demo.launch  bring_up.launch
crc3_add_task/src/: CMakeLists.txt  check_stop.h  check_stop_node.cpp
crc3_control/: CMakeLists.txt  package.xml
crc3_navigation/: CMakeLists.txt  package.xml
crc3_perception/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
crc3_perception/cfg/: Distance.cfg
crc3_perception/data/labels/: .sign_label.pbtxt.swp  sign_label.pbtxt
crc3_perception/msg/: detection.msg
crc3_perception/scripts/: .sign_detector.py.swp  sign_detector.py
crc3_perception/src/sign_detection/: CMakeLists.txt  sign_detection.h  sign_detection_node.cpp
crc3_perception/src/sign_detection/data_file/: passenger_tiny.cfg  sign.names  sign_tiny.cfg
cv_bridge/: CMakeLists.txt  package.xml
pass_detector/: CMakeLists.txt  package.xml
pass_detector/launch/: pass_detect.launch
pass_detector/msg/: detection.msg
pass_detector/src/: CMakeLists.txt  pass_detection.h  pass_detection_node.cpp
pass_detector/src/data_file/: passenger_tiny.cfg  sign_2.names  sign_tiny_2.cfg
